Items alignment near finished, pick-up-points line position fixed, BORDER ISSUE STILL PERSISTS

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,50 @@
 .container {
+    border-radius: 10px;
+    border: 1px solid grey;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
 }
+
 .item {
     padding: 10px;
     border: 1px solid black;
-    height: fit-content;
     width: fit-content;
+    height: fit-content;
 }
-.watch-img {
-    height: 100%;
-    width: 100%;
+
+.leftside {}
+
+.header {
+    flex-basis: 37%;
 }
+
+.rightside {}
+
+.footer {
+    flex-basis: 20%;
+    align-self: flex-end;
+}
+
 h2 {
     float: right;
     font-size: 1.5em;
 }
+
 .buy-button {
     border-radius: 5px;
     border: 1px;
     width: 85%;
-    height: 25%;
 }
+
 .button-text {
     font-size: 1.2em;
 }
+
 .compare-check {
     background-color: aliceblue;
+}
+
+.pick-up-points {
+    float: right;
 }
